fix #32: добавил класс visible, изменил шрифт

--- a/src/css/layout.styl
+++ b/src/css/layout.styl
@@ -4,4 +4,4 @@ body, html
 body
     margin 0
     overflow hidden
-    font 14px Arial, sans-serif
+    font 13px 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif
